# VRD_demo_JDH

./: .gitignore  README.md  Tracking-and-tracing-audiovisual-reuse-Introducing-the-Video-Reuse-Detector.ipynb  pyproject.toml  requirements.txt
script/vrd/: annotation_matcher.py  neighbours.py  notebook_helper.py
vrd/: dbhandler.py  faiss_helper.py  frame_extractor.py  image_preprocessing.py  keras_layer_helper.py  neighbours.py  neural_networks.py  overlap_calculator.py  pylintrc  sequence_finder.py  vrd_project.py
